 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ResultsActivity"
    android:orientation="vertical" >
    
<!-- 
//*********************************************************
// Copyright (c) Microsoft Corporation
// All rights reserved. 
//
// Licensed under the Apache License, Version 2.0 (the ""License""); 
// you may not use this file except in compliance with the License. 
// You may obtain a copy of the License at 
// http://www.apache.org/licenses/LICENSE-2.0 
//
// THIS CODE IS PROVIDED ON AN  *AS IS* BASIS, WITHOUT 
// WARRANTIES OR CONDITIONS OF ANY KIND, EITHER EXPRESS 
// OR IMPLIED, INCLUDING WITHOUT LIMITATION ANY IMPLIED 
// WARRANTIES OR CONDITIONS OF TITLE, FITNESS FOR A PARTICULAR 
// PURPOSE, MERCHANTABLITY OR NON-INFRINGEMENT. 
//
// See the Apache Version 2.0 License for specific language 
// governing permissions and limitations under the License.
//*********************************************************
 -->

    <TextView
        android:id="@+id/lbl_Response_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Response_Title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="10dp" />

    <!-- NO TEXT SINCE THIS IS SET PROGRAMMATICALLY -->
    <TextView
        android:id="@+id/lbl_Response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp" />

    <TextView
        android:id="@+id/lbl_clientLink_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_clientLink_Title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="10dp" />

    <!-- NO TEXT SINCE THIS IS SET PROGRAMMATICALLY -->

    <TextView
        android:id="@+id/lbl_clientLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp" />

    <TextView
        android:id="@+id/lbl_webLink_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_webLink_Title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="10dp" />

    <!-- NO TEXT SINCE THIS IS SET PROGRAMMATICALLY -->

    <TextView
        android:id="@+id/lbl_webLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:autoLink="web" />

</LinearLayout>
